# Advent-of-Code-Template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  justfile
day/: Cargo.toml  README.md  build.rs  cargo-generate.toml
day/benches/: benchmark.rs
day/src/: lib.rs  main.rs  part1.rs  part2.rs
utils/bencher/: Cargo.toml
utils/bencher/src/: lib.rs
utils/runner/src/: lib.rs
